--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = list(g)\n",
+    "city_values = list(g87uuuu7787u7777]\\)\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
