Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "Ok, so the list of countrizes associated with each city has been assigned to the variable `cities`.  Now we will work with reading and manipulating this list of cities."
+    "Ok, so the list of countries associated with each city has been assigned to the variable `cities`.  Now we will work with reading and manipulating this list of cities."
    ]
   },
   {
