--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3]\n",
+    "los_cabos_pop = cities[3]['Pop']\n",
     "los_cabos_pop # 287651"
    ]
   },
