--- a/index.ipynb
+++ b/index.ipynb
@@ -359,22 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
+       "287651"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3]['Pop']\n",
+    "los_cabos_pop = cities[3]['Population']\n",
     "los_cabos_pop # 287651"
    ]
   },
