--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "city_count = len[lsitcities]\n",
+    "city_count = len[list[cities]]\n",
     "city_count # 12"
    ]
   },
