Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "city_count = len[list[cit\n",
+    "city_count = len(citi)\n",
     "city_count # 12"
    ]
   },
