Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,7 @@
     }
    ],
    "source": [
-    "cities[11]['City'] = PyeongChang\n",
+    "cities[11]['City'] = 'PyeongChang\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
